fix spacing for team section

--- a/src/components/shared/team/team.scss
+++ b/src/components/shared/team/team.scss
@@ -17,8 +17,5 @@
 
 .TeamMember {
   text-align: center;
-  padding: 1em;
-  small {
-    line-height: .8em;
-  }
+  padding: 0.2em;
 }
